--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+        xmlns="http://maven.apache.org/POM/4.0.0"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.enway</groupId>
   <artifactId>micronaut-demo</artifactId>
   <version>0.1</version>
   <packaging>${packaging}</packaging>
-
   <parent>
     <groupId>io.micronaut.platform</groupId>
     <artifactId>micronaut-parent</artifactId>
@@ -22,14 +23,12 @@
     <micronaut.runtime>netty</micronaut.runtime>
     <exec.mainClass>it.demo.Application</exec.mainClass>
   </properties>
-
   <repositories>
     <repository>
       <id>central</id>
       <url>https://repo.maven.apache.org/maven2</url>
     </repository>
   </repositories>
-
   <dependencies>
     <dependency>
       <groupId>io.micronaut</groupId>
@@ -194,5 +193,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
